<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0F3E5"
    tools:context=".FirstFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="415dp"
        android:layout_height="130dp"
        android:background="#1D9E6A"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/first_fragment_label"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emi_container"
        android:layout_width="338dp"
        android:layout_height="130dp"
        android:layout_marginTop="80dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/emiLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/emi_display_label"
            android:textAlignment="center"
            android:textColor="#757575" />

        <TextView
            android:id="@+id/emi_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:gravity="center_horizontal"
            android:text="@string/emi_display"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="348dp"
        android:layout_height="263dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="50dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mortgage_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/enter_amount_placeholder"
            android:text="@string/mortgage_amount_label"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/mortgage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/enter_amount_placeholder"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/interest_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/interest_rate_label"
            android:textColor="#000" />

        <EditText
            android:id="@+id/interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/interest_rate_placeholder"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/period_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/amortization_period_label"
            android:textColor="#000" />

        <EditText
            android:id="@+id/period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/ammortization_period_placeholder"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />
    </LinearLayout>

    <Button
        android:id="@+id/calculate"
        android:layout_width="130dp"
        android:layout_height="58dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#1D9E6A"
        android:text="@string/calculate"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>